Fixed minor formatting for phone size where fields get clipped and the captcha was not fitting in the screen

--- a/app/assets/stylesheets/identity.css.scss
+++ b/app/assets/stylesheets/identity.css.scss
@@ -42,8 +42,8 @@
 
 		form {
 			float: right;
-			width: 340px;
-			margin-right: 30px;			
+			width: 300px;
+			margin-right: 50px;
 		}	
 
 		.heading {
